--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
+    <link rel="icon" type="image/svg+xml" href="./src/assets/F-mark-white.svg">
+    <!-- <link rel="alternate icon" href="public/favicon.ico"> -->
+    <link rel="mask-icon" href="./src/assets/F-mark-white.svg" color="#ff8a01">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link 
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap"
     >
 
-    <title>Vite App</title>
+    <title>Filmetrix</title>
   </head>
   <body>
     <div id="app"></div>
