--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <link rel="icon" type="image/svg+xml" href="/public/assets/F-mark-white.svg">
-    <!-- <link rel="alternate icon" href="public/favicon.ico"> -->
-    <link rel="mask-icon" href="/public/assets/F-mark-white.svg" color="#ff8a01">
+    <link rel="icon" type="image/svg+xml" href="/public/F-mark-white.svg">
+    <link rel="mask-icon" href="/public/F-mark-white.svg" color="#ff8a01">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
